Nova evolução da página inicial html - adicionados dois parágrafos

--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -7,5 +7,7 @@
  <body>
   <h1>Subtítulo</h1>
   <p>Primeiro parágrafo</p>
+  <p>Segundo parágrafo</p>
+  <p>Terceiro parágrafo</p>
  </body>
 </html>
